force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <description>RIVA Custom Object</description>
    <label>Activity (R)</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>