force-app/main/default/objects/Activity__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <externalId>true</externalId>
    <label>Event</label>
    <length>18</length>
    <type>Text</type>
</CustomField>