force-app/main/default/objects/Activity__c/fields/Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://hl.my.salesforce.com/&quot; &amp; Event__c , &quot;View Activity&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Link</label>
    <type>Text</type>
</CustomField>