force-app/main/default/objects/Activity__c/fields/GlobalObjectId__c.field-meta.xml
<CustomField>
    <fullName>GlobalObjectId__c</fullName>
    <label>GlobalObjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>