force-app/main/default/objects/Activity__c/fields/IsAllDay__c.field-meta.xml
<CustomField>
    <fullName>IsAllDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllDay</label>
    <type>Checkbox</type>
</CustomField>