force-app/main/default/objects/Activity__c/fields/SyncToOutlook__c.field-meta.xml
<CustomField>
    <fullName>SyncToOutlook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SyncToOutlook</label>
    <type>Checkbox</type>
</CustomField>