force-app/main/default/objects/Activity__c/listViews/All_Riva_Activities.listView-meta.xml
<ListView>
    <fullName>All_Riva_Activities</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Event_Link__c</columns>
    <columns>GlobalObjectId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Riva Activities</label>
</ListView>